syntax = "proto3";

package api.user.service.v1;

import "google/api/annotations.proto";

option go_package = "github.com/lalifeier/vgo/api/account/service/v1;v1";
option java_multiple_files = true;
option java_package = "api.user.service.v1";

service AccountService {}
